--- a/public/output.css
+++ b/public/output.css
@@ -626,10 +626,6 @@ video {
   position: relative;
 }
 
-.right-40 {
-  right: 10rem;
-}
-
 .right-8 {
   right: 2rem;
 }
@@ -664,14 +660,6 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
-}
-
-.w-2\/6 {
-  width: 33.333333%;
-}
-
-.w-5\/6 {
-  width: 83.333333%;
 }
 
 .w-full {
@@ -719,10 +707,6 @@ video {
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
 }
 
 .p-8 {
@@ -812,15 +796,40 @@ body{
 }
 
 @media (min-width: 640px) {
+  .sm\:flex {
+    display: flex;
+  }
+
+  .sm\:w-5\/6 {
+    width: 83.333333%;
+  }
+
+  .sm\:w-full {
+    width: 100%;
+  }
+
+  .sm\:p-1 {
+    padding: 0.25rem;
+  }
+
   .sm\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
 @media (min-width: 768px) {
   .md\:absolute {
     position: absolute;
+  }
+
+  .md\:right-40 {
+    right: 10rem;
   }
 
   .md\:block {
@@ -835,8 +844,8 @@ body{
     width: 50%;
   }
 
-  .md\:w-3\/6 {
-    width: 50%;
+  .md\:p-3 {
+    padding: 0.75rem;
   }
 
   .md\:pt-0 {
